# FreeRTOSv10_w_armadillo

./: .gitmodules  CMakeLists.txt  build.sh  compile.sh
src/: freertos_test.c
